<?xml version="1.0" encoding="utf-8"?>
<layout>

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_5"
        android:clickable="true"
        android:elevation="@dimen/dp_5"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardCornerRadius="@dimen/dp_5">

        <LinearLayout
            android:id="@+id/llLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/dp_10">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/ivImage"
                    android:layout_width="100dp"
                    android:background="@drawable/common_no_image1"
                    android:layout_height="100dp" />

                <TextView
                    android:id="@+id/tvTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/dp_5"
                    android:gravity="center"
                    android:text="Title"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/sp_24"
                    android:textStyle="bold" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_5"
                    android:layout_marginBottom="@dimen/dp_5"
                    android:layout_weight="1"
                    android:text="@string/when_date"
                    android:textColor="@color/textPrimary"
                    android:textSize="@dimen/sp_16" />

                <TextView
                    android:id="@+id/tvDate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_5"
                    android:layout_marginBottom="@dimen/dp_5"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:text="Date"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/sp_16" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_5"
                    android:layout_marginBottom="@dimen/dp_5"
                    android:layout_weight="1"
                    android:text="@string/when_time"
                    android:textColor="@color/textPrimary"
                    android:textSize="@dimen/sp_16" />

                <TextView
                    android:id="@+id/tvTime"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_5"
                    android:layout_marginBottom="@dimen/dp_5"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:text="Time"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/sp_16" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_5"
                    android:layout_marginBottom="@dimen/dp_5"
                    android:layout_weight="1"
                    android:text="@string/where"
                    android:textColor="@color/textPrimary"
                    android:textSize="@dimen/sp_16" />

                <TextView
                    android:id="@+id/tvPlace"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_5"
                    android:layout_marginBottom="@dimen/dp_5"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:text="Place"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/sp_16" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_5"
                    android:layout_marginBottom="@dimen/dp_5"
                    android:layout_weight="1"
                    android:text="@string/price"
                    android:textColor="@color/textPrimary"
                    android:textSize="@dimen/sp_16" />

                <TextView
                    android:id="@+id/tvPrice"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_5"
                    android:layout_marginBottom="@dimen/dp_5"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:text="Price"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/sp_16" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_5"
                    android:layout_marginBottom="@dimen/dp_5"
                    android:layout_weight="1"
                    android:text="@string/contact_person"
                    android:textColor="@color/textPrimary"
                    android:textSize="@dimen/sp_16" />

                <TextView
                    android:id="@+id/tvContactPerson"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_5"
                    android:layout_marginBottom="@dimen/dp_5"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:text="Person"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/sp_16" />

            </LinearLayout>


            <at.blogc.android.views.ExpandableTextView
                android:id="@+id/tvDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_15"
                android:layout_marginBottom="@dimen/dp_5"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="Description"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/sp_16"
                app:animation_duration="700" />

            <ImageView
                android:id="@+id/ivArrow"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dp_15"
                android:layout_gravity="end"
                android:src="@mipmap/expand" />
        </LinearLayout>
    </android.support.v7.widget.CardView>
</layout>